# MAGOS

./: readme.md
build_builder/: CMakeCache.txt  Makefile  build_maze  cmake_install.cmake  entrada.txt
build_canvas/: CMakeCache.txt  Makefile  cmake_install.cmake  dcanvas
build_magos/: CMakeCache.txt  MAGOS  Makefile  cmake_install.cmake  setup.txt
build_maze/: CMakeCache.txt  Makefile  cmake_install.cmake
build_render/: CMakeCache.txt  Makefile  cmake_install.cmake  entrada.txt  render
dev_builder/: CMakeLists.txt
dev_builder/include/: builder.h
dev_builder/src/: builder.cpp
dev_canvas/include/: canvas.h
dev_magos/: CMakeLists.txt
dev_magos/include/: magos.h
dev_magos/src/: magos.cpp  main.cpp
dev_maze/: CMakeLists.txt
dev_maze/include/: maze.h
dev_maze/src/: maze.cpp
dev_render/: CMakeLists.txt
dev_render/include/: render.h
dev_render/src/: render.cpp
dev_solver/include/: solver.h
dev_solver/src/: solver.cpp
driver/: m  main.cpp
driver/canvas/: CMakeLists.txt
driver/canvas/src/: canvas.cpp  driver_canvas.cpp
driver/maze/include/: maze.h
driver/maze/src/: driver_maze.cpp  maze.cpp
driver/render/include/: render.h
driver/render/src/: driver_render.cpp  render.cpp
libs/: common.h
libs/configFileReader/: configFileReader.cpp  configFileReader.h
